# midoku-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
examples/example-extension/: .gitattributes  Cargo.toml  README.md
examples/example-extension/src/: bindings.rs  lib.rs
examples/example-extension/wit/: deps.toml  world.wit
examples/example-source/: Cargo.toml  README.md  build.rs
examples/example-source/src/: bindings.rs  lib.rs
examples/example-source/wit/: deps.toml  world.wit
midoku-bindings/: Cargo.toml  build.rs
midoku-bindings/src/: bindings.rs  func.rs  lib.rs  resource_table.rs  state.rs
midoku-bindings/src/instance_impl/: midoku_http.rs  midoku_limiter.rs  midoku_settings.rs  mod.rs
midoku-bindings/tests/: bindings.rs  example_extension.wasm
midoku-bindings/tests/wasm-binaries/: example_extension.wasm
midoku-bindings/wit/: bindings.wit  deps.toml
midoku-http/: Cargo.toml
midoku-http/src/: bindings.rs  client.rs  lib.rs  outgoing_handler.rs  response.rs  types.rs
midoku-http/tests/: http.rs
midoku-http/wit/: world.wit
midoku-limiter/: Cargo.toml
midoku-limiter/src/: rate_limiter.rs
midoku-limiter/tests/: limiter.rs
midoku-settings/: Cargo.toml
midoku-settings/src/: types.rs
midoku-types/: Cargo.toml  build.rs
midoku-types/src/: bindings.rs  chapter.rs  filter.rs  lib.rs  manga.rs  page.rs
midoku-types/wit/: chapter.wit  manga.wit  page.wit  world.wit
midoku-types/witgen/: types.wit
wit/: types.wit
