[workspace]
resolver = "2"
members = ["midoku-*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
codegen-units = 1

[workspace.dependencies]
midoku-http = { path = "midoku-http" }
midoku-limiter = { path = "midoku-limiter" }
midoku-settings = { path = "midoku-settings" }
midoku-types = { path = "midoku-types" }

wasmtime = "29.0.1"

tokio = { version = "1.43.0", default-features = false, features = [
    "rt",
    "macros",
] }
