[package]
name = "midoku-bindings"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midoku-http = { path = "../midoku-http" }
midoku-limiter = { path = "../midoku-limiter" }
midoku-settings = { path = "../midoku-settings" }
midoku-types = { path = "../midoku-types" }
wasmtime = "26.0.1"
parking_lot = { version = "0.12.3", optional = true }

[dev-dependencies]
once_cell = "1.20.2"

[build-dependencies]
wit-deps = "0.4.0"

[features]
default = []
async = ["dep:parking_lot"]
