[package]
name = "midoku-bindings"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midoku-http = { path = "../midoku-http" }
midoku-limiter = { path = "../midoku-limiter" }
midoku-settings = { path = "../midoku-settings" }
midoku-types = { path = "../midoku-types" }
wasmtime = "26.0.1"
parking_lot = "0.12.3"

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
    "rt",
    "macros",
] }

[build-dependencies]
wit-deps = "0.4.0"
