[package]
name = "midoku-bindings"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midoku-http.workspace = true
midoku-limiter.workspace = true
midoku-settings.workspace = true
midoku-types.workspace = true

wasmtime.workspace = true

parking_lot = "0.12.3"

[dev-dependencies]
tokio.workspace = true

[build-dependencies]
wit-deps = "0.4.0"
