[package]
name = "midoku-http"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12.4", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
wasmtime = "20.0.0"
