[package]
name = "midoku-http"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }
wasmtime = "26.0.1"

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = [
    "rt",
    "macros",
] }
