[package]
name = "midoku-http"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true

reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "charset",
    "http2",
    "macos-system-configuration",
] }

[dev-dependencies]
tokio.workspace = true
