[package]
name = "example-extension"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[build-dependencies]
wit-deps = "0.3.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "midoku:example-extension"

[package.metadata.component.target.dependencies]
"midoku:bindings" = { path = "wit/deps/midoku-bindings" }
"midoku:http" = { path = "wit/deps/midoku-http" }
"midoku:limiter" = { path = "wit/deps/midoku-limiter" }
"midoku:settings" = { path = "wit/deps/midoku-settings" }
"midoku:types" = { path = "wit/deps/midoku-types" }
