[package]
name = "example-source"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }

[build-dependencies]
anyhow = "1.0.82"
wit-deps = "0.3.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "midoku:example-source"

[package.metadata.component.target.dependencies]
"midoku:types" = { path = "wit/deps/midoku" }
